--- a/src/style/index.scss
+++ b/src/style/index.scss
@@ -1,2 +1,8 @@
 @import "./components/collapse.scss";
 @import "./components/scrollbar.scss";
+@import "./components/dropdown.scss";
+@import "./components/select.scss";
+
+body, html {
+  overflow: hidden;
+}
